--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=1280">
-<title>버거킹</title>
+<title>버거킹 포트폴리오2</title>
 <meta name="description" content="버거킹 홈페이지">
 <meta property="og:type" content="website">
 <meta property="og:title" content="버거킹">
@@ -218,21 +218,3 @@
 </div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
